--- a/demographics.html
+++ b/demographics.html
@@ -16,8 +16,8 @@
             <nav>
                 <div class="nav-links">
                     <ul>
-                        <li><b><a href="index.html">Home</a></b></li>
-                        <li><a href="demographics.html">Demographics</a></b></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><b><a href="demographics.html">Demographics</a></b></li>
                         <li><a href="demographics.html">Patient Info</a></li>
                         <li><a href="demographics.html">Messages</a></li>
                         <li><a href="demographics.html">Appointments</a></li>
@@ -33,7 +33,9 @@
                 </div>
             </nav>
             <div class="page">
-                <h2>Home</h2>
+                <h2>Demographics</h2>
+                <form action="/url" method="GET">
+                </form>
             </div>
         </section>
     </body>
